public/css/blog.css
* {
    font-family: 'Ubuntu', sans-serif;
}

.nav-links {
    list-style-type: none;
    display: flex;
    padding: 0;
    margin: 0;
    gap: 20px;
    margin-left: 50%;



}

.nav-links li {
    margin: 0;

}

.nav-links a:hover {
    text-decoration: underline;
    color: aqua;
}



.nav-links li a {
    text-decoration: none;
    justify-content: space-between;
    color: rgb(19, 225, 240)
}

.profile-img img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

footer {
    background-color: black;

}

.footer-container {
    width: 100%;
    padding: 70px 30px 20px;


}

.footerNav ul {
    list-style-type: none;
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
    margin: 2% 25%;
    flex-wrap: wrap;
}

.footerNav li a {
    color: white;
    text-decoration: none;
}

.footerNav a:hover {
    text-decoration: underline;
    color: aqua;
}

.social {
    display: flex;
    justify-content: center;

}

.social i {
    text-decoration: none;
    padding: 10px;
    background-color: white;
    margin: 5px;
    border-radius: 30%;
}

.youtube {
    color: red;

}

.github {
    color: rgb(49, 7, 49);
}

.footer-bottom {
    text-align: center;
    color: grey;
    flex-wrap: wrap;
}

.quote {
    text-align: center;
}

.quote2 {
    background-color: white;
}

/* this style for post template card */
.card-body a {
    float: right;
    color: black;
    background-color: aqua;
    border-color: grey;
}

.modal {
    display: none;
    /* Hide the modal by default */
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    border-radius: 4px;
    max-width: 600px;
    /* Adjust the maximum width as needed */
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
}

.close {
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
}

.blog-post-area {
    display: flex;
    flex-wrap:wrap;
    justify-content: space-between;
   

   
}


.video-card img {
    padding: 10px;
    width: 250px;
}

.video-card h3 {
    color: black;
    font-size: medium;
    padding: 10px;

}

.videos-container h1 {

    padding: 10px;
}

.video-card {

    width: 300px;
    border: 1px solid #ccc;
    padding: 10px;
    margin: 10px;
    box-shadow: 0 0 10px rgba(7, 167, 241, 0.5);
}

.fetched-videos {
    display: flex;

}

.about-developers {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}


.developer-cards img {
    width: 200px;
    height: 200px;
    display: block;
    border-radius: 10em;
    padding: 5px;
    margin: auto;
    border: 3px solid aqua;
    padding: 10px;

}

.developer-cards p {
    color: #5a5656ce;
    width: 400px;
    margin: auto;

}

.developer-position {
    display: flex;

}

.flex-container {
    display: flex;
    align-items: center;
    gap: 10px;
    padding-bottom: 40px;
}

.about-app p {
    display: block;
    text-align: center;
    width: 800px;
    margin-left: auto;
    margin-right: auto;



}

.stanley-quote h3 {
    text-align: center;
    font-weight: bold;
    padding-top: 40px;
    font-size: xx-large;

}

.stanley-quote ul li {
    list-style-type: none;
    text-align: center;
    background-color: rgba(30, 231, 221, 0.521);
}

.bolded {
    font-weight: bold;
}

.stanley-quote p {
    width: 50%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;



}

.stanley-quote h1 {
    color: rgba(128, 128, 128, 0.205);
    font-weight: bold;
    padding-top: 20px;
    font-size: xx-large;
    text-decoration: underline;
}

.background {
    background-color: white;

}

.date-created p {
    font-size: 12px;
    color: #888;
    float: right;
    display: block;
}


.card-body {
    display: block;
}

.card-text {
    color: black;
}

.like-comment-section {
    display: flex;
    
}


.like-comment-section p {
    padding-right: 5px;
    margin:0;
    color:grey;
}

.modal-close-button {
    
    width:60px;
    border-radius: 4px;
    background-color: aqua;
    color:black;
    border-color: white;
    
    
}

.modal-comment-button {
    width:130px;
    border-radius: 4px;
    background-color: green;
    color:black;
    border-color: white;
}

.modal-button button {
    padding-top: 2px;
    float:right;
}

